# gitz

./: .gitignore  .travis.yml  CHANGELIST  CHANGELOG  LICENSE  README.md  README.rst  _check.sh  _gitz.py  _make_single_files  _python_commands.txt  _test.sh  check.sh  common.py  git-adjust  git-all  git-amp  git-combine  git-copy  git-delete  git-for-each  git-fresh  git-gitz  git-go  git-infer  git-listall  git-loga  git-logr  git-logra  git-ls  git-multi-pick  git-new  git-permute  git-rename  git-restore  git-rot  git-rotate  git-save  git-shuffle  git-snip  (+10 more)
_gitz/: __init__.py  commit_indexer.py  env.py  git.py  git_program.py  program.py  util.py
cast/: README.txt  git-copy.cast  git-for-each.cast  git-gitz.cast  git-infer.cast  git-rotate.cast  git-save.cast  git-st.cast  git-stripe.cast
doc/: README.rst  git-adjust.rst  git-all.rst  git-amp.rst  git-combine.rst  git-copy.rst  git-delete.rst  git-for-each.rst  git-fresh.rst  git-gitz.rst  git-go.rst  git-infer.rst  git-ls.rst  git-multi-pick.rst  git-new.rst  git-permute.rst  git-rename.rst  git-restore.rst  git-rot.rst  git-rotate.rst  git-save.rst  git-shuffle.rst  git-snip.rst  git-split.rst  git-st.rst  git-stripe.rst  git-update.rst  git-when.rst
doc/cast/: all-gitz.cast  all-gitz.json  git-adjust.cast  git-amp.cast  git-copy.cast  git-delete.cast  git-for-each.cast  git-gitz.cast  git-infer.cast  git-multi-pick.cast  git-new.cast  git-permute.cast  git-rename.cast  git-rot.cast  git-rotate.cast  git-save.cast  git-shuffle.cast  git-split.cast  git-st.cast  git-stripe.cast  git-update.cast  git-when.cast
gitz/: combine.py  commit_indexer.py  config.py  delete.py  env.py  git.py  git_functions.py  git_root.py  guess_origin.py  help_parser.py  helper.py  log.py  mover.py  parser.py  program.py  reference_branch.py  run_proc.py  runner.py  util.py
gitz/git/: __init__.py  combine.py  commit_range.py  commit_segments.py  delete.py  functions.py  guess_origin.py  mover.py  reference_branch.py  repo.py  root.py  save.py
gitz/helper/: command.py  directory.py  dirs.py  help_parser.py  helper.py  main.py  make.py  manpages.py  pages.py  reader.py  screenshot.py  summary.py
gitz/make_doc/: directory.py  doc_index.py  get_command_help.py  main.py  manpages.py  readme.py
gitz/program/: __init__.py  env.py  parser.py  print_help.py  program.py  run_proc.py  runner.py  safe_writer.py  summaries.py
gitz_doc/: __main__.py  clean_manpage.py  command_pages.py  dirs.py  doc_index.py  doc_requirements.txt  get_command_help.py  get_command_summaries.py  main.py  manpages.py  movies.py  readme.py  safe_writer.py  template_manpages.py  worker.py
gitz_doc/cast/: cast.py  constants.py  generated_movies.py  keystrokes.py  movies.py  needs_update.py  render.py  script_runner.py  typing_errors.py
gitz_doc/movies/: all_movies.py  (+15 more)
help/: README.rst  git-all.rst  git-amp.rst  git-combine.rst  git-copy.rst  git-delete.rst  git-fresh.rst  git-gitz.rst  git-infer.rst  git-ls.rst  git-rename.rst  git-rotate.rst  git-shuffle.rst  git-snip.rst  git-split.rst  git-stripe.rst
scripts/: clean_docs.sh  make_docs.sh  run_tests_dev.sh
single_file/: _single_file.py  git-combine  git-loga  git-logr  git-rot  git-snip  git-split
single_files/: git-amp  git-combine  git-infer  git-loga  git-logr  git-ls  git-open  git-rename  git-rot  git-snip  git-split  git-st
test/: _help.sh  _test.sh  _test_dev.sh  clean_manpage_test.py  combine_test.py  commit_range_test.py  git_adjust_test.py  git_all_test.py  git_amp_test.py  git_combine_test.py  git_copy_test.py  git_delete_test.py  git_for_each_test.py  git_fresh_test.py  git_gitz_test.py  git_infer_test.py  git_ls_test.py  git_multi_pick_test.py  git_new_test.py  git_permute_test.py  git_rename_test.py  git_rot_test.py  git_rotate_test.py  git_save_test.py  git_segments_test.py  git_shuffle_test.py  git_snip_test.py  git_split_test.py  git_st_test.py  git_stripe_test.py  git_update_test.py  git_when_test.py  gitz_commands.txt  repo.py  repo_maker.py  repo_test.py  runner_test.py  test_import_all.py  test_requirements.txt
(+55 files in other folders)
