[project]
name = "gitz"
version = "1.8.0"
description = "🗜 Tiny useful git commands, some dangerous 🗜"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.rst"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]
dependencies = ["coverage>=7.3.2,<8"]

[project.urls]
Homepage = "https://github.com/rec/gitz"
Repository = "https://github.com/rec/gitz"

[dependency-groups]
dev = [
    "impall>=1.1.1,<2",
    "pytest>=7.2.0,<8",
    "pytest-xdist>=3.0.2,<4",
    "safer>=4.4.1,<5",
    "termtosvg>=1.1.0,<2",
    "asciinema>=2.2.0,<3",
    "coverage>=7.4.1",
    "pyupgrade>=3.21.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""


[tool.coverage]
[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff.format]
quote-style = "single"
[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"


